# yolo-mpi-people-count

./: .gitignore  README.md  pyproject.toml
configs/: cluster_macos.env.example  hosts_macos_core  hosts_macos_core_weighted_12  hosts_macos_core_weighted_12_4_6_2  hosts_macos_core_weighted_12_4_6_2_live  hosts_macos_core_weighted_12_4_6_2_seq  hosts_macos_cpu_max_live  hosts_macos_cpu_uniform_24  hosts_macos_cpu_weighted_24  hosts_macos_cpu_weighted_live  hosts_macos_gpu  hosts_macos_live  rankfile_weighted_12_4_6_2_live  yolo_mps_experiment.env.example
docs/: 00_PROJECT_OVERVIEW.md  01_ALGORITHM_AND_REPORT_RUNBOOK.md  02_CODE_READING_GUIDE.md  03_PARALLEL_ALGORITHM_SHORT.md
plots/: plot_count_error.py  plot_find_n.py  plot_rank_metrics.py  plot_speedup.py
reports/: README.md  additional_experiments_20260623.md  defense_qa_notes.md  experiment_results_summary.md  final_report_hust_style.html  final_report_hust_style.md  final_submission_checklist.md  full_experiment_runbook.md  method2_vgg11_notes.md  nonblocking_462_results.md  parallel_yolo_mpi_report.md  requirement_coverage_audit.md
scripts/: README.md  build.sh  check_cluster_macos.sh  download_hf_assets.py  download_model.py  evaluate_count_accuracy.py  import_cluster_reference.sh  live_viewer.py  run_cluster_yolo_smoke.sh  run_demo_correctness.sh  run_demo_perf.sh  run_find_N.sh  run_live_camera_demo.sh  run_mot17_fullseq_accuracy_suite.sh  run_report_mot17_fullseq.sh  run_report_mot17_mini.sh  run_required_experiments.sh  run_speedup_sweep.sh  setup_yolo_macos.sh  sync_to_nodes.sh  upload_hf_assets.py  (+2 more)
(+188 files in other folders)
